# syncdoc-free

./: .doppler.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mise.toml
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_source_id_to_doc_pages.py  003_timezone_aware_columns.py  004_add_app_settings.py  005_add_source_credentials.py  006_add_users_and_user_id_to_sources.py  007_add_local_auth.py  008_add_vector_embedding.py  009_add_api_keys.py  010_add_workflow.py  011_add_org_project_rbac.py  012_cleanup_orphaned_doc_pages.py  013_add_user_theme.py  014_add_graph_annotations.py  015_add_organization_licenses.py  016_add_password_reset_and_marketing_opt_in.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: admin.py  analytics.py  api_keys.py  auth.py  capabilities.py  credentials.py  drift.py  graph.py  health.py  license.py  organizations.py  owner_explorer.py  pages.py  projects.py  search.py  settings.py  sources.py  sync_events.py  workflow.py
backend/app/connectors/: __init__.py  ansible.py  base.py  ci_cd.py  docker.py  exceptions.py  git.py  registry.py  terraform.py
backend/app/core/: config.py  context.py  database.py  deps.py  rbac.py  security.py
backend/app/models/: __init__.py  api_key.py  credential.py  drift.py  graph_edge_manual.py  graph_note.py  node.py  organization.py  organization_license.py  organization_membership.py  page.py  password_reset_token.py  project.py  setting.py  source.py  sync.py  user.py  workflow.py
backend/app/schemas/: capabilities.py  credential.py  drift.py  license.py  organization.py  owner_explorer.py  page.py  project.py  settings.py  source.py  workflow.py
backend/app/services/: capabilities.py  credentials.py  doc_generator.py  email.py  embeddings.py  entitlements.py  notifications.py  owner_explorer.py  sync_events.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_capabilities.py  test_health.py  test_pages.py  test_sources.py
(+90 files in other folders)
