[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syncdoc"
version = "0.1.0"
description = "Infrastructure-Aware Living Documentation"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "SyncDoc Contributors" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "python-hcl2>=4.0.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    "langchain>=0.1.0",
    "scikit-learn>=1.3.0",
    "greenlet>=3.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "sqlalchemy[mypy]>=2.0.0",
    "aiosqlite>=0.19.0",
    "markdown-pdf>=1.5.0",
    "markdown-include>=0.8.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C901",
    "I",
]
exclude = [".venv", "venv", ".git", "__pycache__"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
